Refactor & add favicon

--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,5 +1,9 @@
 <html>
-  {{> htmlHead}}
+  <head>
+    {{{headTags}}}
+    <link rel="stylesheet" type="text/css" href="{{publicPath}}/report.css" />
+    <title>{{ id }}</title>
+  </head>
   <body>
     <div>
       <div class="report">
