--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -1,9 +1,5 @@
 <html>
-  <head>
-    {{{headTags}}}
-    <link rel="stylesheet" type="text/css" href="{{publicPath}}/report.css" />
-    <title>{{ id }}</title>
-  </head>
+  {{> htmlHead }}
   <body>
     <div>
       <div class="report">
