--- a/src/style/report.scss
+++ b/src/style/report.scss
@@ -25,7 +25,7 @@ body {
   font-family: "Myriad Pro", Arial, sans-serif;
   margin: auto;
   max-width: 800px;
-  min-width: 500px;
+  min-width: 350px;
   text-align: center;
   width: 100%;
 }
@@ -117,6 +117,7 @@ body {
 
   .title {
     text-transform: uppercase;
+    width: 60%;
   }
 }
 
